# scruff

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  TALI-MODE.md  pyproject.toml  ruff.schema.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: 3_question.yaml
.github/workflows/: build-binaries.yml  build-docker.yml  ci.yaml  daily_fuzz.yaml  mypy_primer.yaml  notify-dependents.yml  publish-pypi.yml  publish-wasm.yml  sync_typeshed.yaml  ty-ecosystem-analyzer.yaml  ty-ecosystem-report.yaml  typing_conformance.yaml
crates/ruff/: Cargo.toml
crates/ruff_dev/: Cargo.toml
crates/ruff_dev/src/: format_dev.rs  generate_cli_help.rs  generate_options.rs  main.rs  (+1 more)
crates/ruff_linter/: Cargo.toml
crates/ruff_server/: CONTRIBUTING.md
crates/ruff_wasm/: Cargo.toml  README.md
crates/scruff/: Cargo.toml
docs/: configuration.md  faq.md  formatter.md  installation.md  integrations.md  linter.md  preview.md  tutorial.md
docs/editors/: features.md  index.md  migration.md  settings.md  setup.md
examples/: .gitignore
examples/mode-override/: diff.sh  main.py  pyproject.toml
examples/quote-style-symbol/: main.py  pyproject.toml
examples/tali-mode/: diff.sh  main.py  pyproject.toml
playground/: package.json
python/py-fuzzer/: fuzz.py  pyproject.toml
python/ruff-ecosystem/: pyproject.toml
python/scruff/: __main__.py
scripts/: check_docs_formatted.py  ecosystem_all_check.py  generate_mkdocs.py  pyproject.toml  update_schemastore.py
scripts/benchmarks/: pyproject.toml
scripts/ty_benchmark/: pyproject.toml
(+51 files in other folders)
